# atp2osm-import

./: .env.sample  .gitignore  AtpPoi.py  CLAUDE.md  Config.py  Containerfile  README.md  container-compose.yml  main.py  pyproject.toml  refresh-data.sh  run-pipeline.sh  utils.py
deploy/: atp2osm.container  refresh.service  refresh.timer  run
migrations/: 001_create_import_history.sql  002_add_brand_name.sql  003_create_data_imports.sql  004_data_imports_created_at_status.sql  005_create_todo_brands.sql  006_todo_brands_wikidata_optional.sql  007_data_imports_skipped_status.sql  008_import_history_tags_count.sql  009_import_history_partial_status.sql  010_import_history_new_statuses.sql  011_import_history_drop_legacy_statuses.sql  012_normalize_phone_fn.sql  013_data_imports_comment.sql
osm2pgsql/: generic.lua
scripts/: gen_og_card.py
src/: __init__ copy.py  app.py  compute_diff.py  config.py  db.py  logs.py  main.py  matching.py  migrate.py  render_for_ctc.py  render_website.py  setup.py  upload.py  utils.py  views_utils.py
src/lib/: bulk_upload.py
src/models/: __init__.py  atp_poi.py  config.py  osm_poi.py  server_wrapper.py
src/pipeline/: README.md  __main__.py  _db.py  atp.py  atp2osm.py  constants.py  dag.py  ndgeojson_to_parquet.py  osm.py  runner.py
src/routes/: auth.py  brands.py  history.py  misc.py  todo.py
static/css/: app.css  brands.css  icown.css
static/js/: auth.js  brands.js  confirm.js  history_detail.js  rejected.js  sidebar.js  todo.js  validate.js
tests/: test_compute_diff.py
website/templates/: _aside.html  _base.html  (+12 more)
(+7 files in other folders)
