[project]
name = "atp2osm-import"
version = "0.1.0"
description = "Import ATP FR data into OSM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "cli-oauth2>=0.3.1",
    "duckdb>=1.4.3",
    "flask>=3.1.2",
    "flask-caching>=2.3.1",
    "jinja2>=3.1.6",
    "logging>=0.4.9.6",
    "osmapi>=4.3.0",
    "paramiko>=4.0.0",
    "psycopg[binary]>=3.3.2",
    "requests>=2.32.5",
    "scp>=0.15.0",
]

[dependency-groups]
dev = ["pytest>=9.0.2"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = ["--import-mode=importlib"]
